proj.android/app/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_MyGame_armeabi-v7a.stdout.txt
ninja: Entering directory `/Users/imac_vtca/Documents/GitHub/TowersDefend/proj.android/app/.cxx/cmake/debug/armeabi-v7a'
[1/6] Building CXX object CMakeFiles/MyGame.dir/Classes/Creep.cpp.o
FAILED: CMakeFiles/MyGame.dir/Classes/Creep.cpp.o 
/Users/imac_vtca/Library/Android/sdk/ndk-bundle/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=armv7-none-linux-androideabi16 --gcc-toolchain=/Users/imac_vtca/Library/Android/sdk/ndk-bundle/toolchains/llvm/prebuilt/darwin-x86_64 --sysroot=/Users/imac_vtca/Library/Android/sdk/ndk-bundle/toolchains/llvm/prebuilt/darwin-x86_64/sysroot  -DANDROID -DCOCOS2D_DEBUG=1 -DLWS_WITH_LIBUV -DMyGame_EXPORTS -DUSE_FILE32API -I../../../../../../Classes -I../../../../../../cocos2d/cocos/audio/include -I../../../../../../cocos2d -I../../../../../../cocos2d/cocos -I../../../../../../cocos2d/extensions -I../../../../../../cocos2d/cocos/platform -I../../../../../../cocos2d/cocos/base -I../../../../../../cocos2d/cocos/editor-support -I../../../../../../cocos2d/cocos/platform/android -isystem ../../../../../../cocos2d/external/Box2D/include -isystem ../../../../../../cocos2d/external/chipmunk/include -isystem ../../../../../../cocos2d/external/freetype2/include/android/freetype2 -I../../../../../../cocos2d/external/recast/.. -isystem ../../../../../../cocos2d/external/jpeg/include/android -isystem ../../../../../../cocos2d/external/uv/include -isystem ../../../../../../cocos2d/external/webp/include/android -isystem ../../../../../../cocos2d/external/bullet/include -isystem ../../../../../../cocos2d/external/bullet/include/bullet -isystem ../../../../../../cocos2d/external/openssl/include/android -isystem ../../../../../../cocos2d/external/tiff/include/android -isystem ../../../../../../cocos2d/external/websockets/include/android -I../../../../../../cocos2d/external/tinyxml2/. -I../../../../../../cocos2d/external/xxhash/. -I../../../../../../cocos2d/external/xxtea/. -I../../../../../../cocos2d/external/clipper/. -I../../../../../../cocos2d/external/edtaa3func/. -I../../../../../../cocos2d/external/ConvertUTF/. -I../../../../../../cocos2d/external/poly2tri/.. -I../../../../../../cocos2d/external/md5/.. -isystem ../../../../../../cocos2d/external/curl/include/android -isystem ../../../../../../cocos2d/external/png/include/android -I/Users/imac_vtca/Library/Android/sdk/ndk-bundle/sources/android/cpufeatures -I../../../../../../cocos2d/external/android-specific/pvmp3dec/include -I../../../../../../cocos2d/external/android-specific/pvmp3dec/src -I../../../../../../cocos2d/external/android-specific/tremolo/. -isystem ../../../../../../cocos2d/external/zlib/include -I../../../../../../cocos2d/external/unzip/. -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -frtti -fexceptions -fsigned-char -O0 -fno-limit-debug-info  -fPIC   -std=gnu++11 -MD -MT CMakeFiles/MyGame.dir/Classes/Creep.cpp.o -MF CMakeFiles/MyGame.dir/Classes/Creep.cpp.o.d -o CMakeFiles/MyGame.dir/Classes/Creep.cpp.o -c ../../../../../../Classes/Creep.cpp
../../../../../../Classes/Creep.cpp:4:17: error: use of undeclared identifier 'Director'; did you mean 'cocos2d::Director'?
    visibleSize=Director::getInstance()->getVisibleSize();
                ^~~~~~~~
                cocos2d::Director
../../../../../../cocos2d/cocos/physics/CCPhysicsWorld.h:46:7: note: 'cocos2d::Director' declared here
class Director;
      ^
../../../../../../Classes/Creep.cpp:5:13: error: use of undeclared identifier 'Director'; did you mean 'cocos2d::Director'?
    origin= Director::getInstance()->getVisibleSize();
            ^~~~~~~~
            cocos2d::Director
../../../../../../cocos2d/cocos/physics/CCPhysicsWorld.h:46:7: note: 'cocos2d::Director' declared here
class Director;
      ^
../../../../../../Classes/Creep.cpp:10:17: error: use of undeclared identifier 'Sprite'; did you mean 'cocos2d::Sprite'?
    auto rect = Sprite::create("crate.png");
                ^~~~~~
                cocos2d::Sprite
../../../../../../cocos2d/cocos/vr/CCVRGenericRenderer.h:36:7: note: 'cocos2d::Sprite' declared here
class Sprite;
      ^
3 errors generated.
[2/6] Building CXX object CMakeFiles/MyGame.dir/Classes/AppDelegate.cpp.o
[3/6] Building CXX object CMakeFiles/MyGame.dir/Classes/SplashScene.cpp.o
[4/6] Building CXX object CMakeFiles/MyGame.dir/Classes/MenuScene.cpp.o
[5/6] Building CXX object CMakeFiles/MyGame.dir/Classes/GameScene.cpp.o
ninja: build stopped: subcommand failed.
